# clue

./: .gitignore  Makefile.am  README  configure.ac  setenv.sh
plugins/main/: main.js  main.ui  main.xml  start
src/: Makefile.am  clue  clue.c  ctkbasedecorator-win32.c  ctkbasedecorator-x11.c  ctkbasedecorator.h  ctkcommondialog-win32.c  ctkcommondialog-x11.c  ctkcommondialog.h  ctkdecoratorbutton.c  ctkdecoratorbutton.h  ctkdecoratorwidget.c  ctkdecoratorwidget.h  ctkdecoratorwidgetprivate.h  ctkdocmodel.c  ctkdocmodel.h  ctkdocpage.c  ctkdocpage.h  ctkdocrendercache.c  ctkdocrendercache.h  ctkdocrendertask.c  ctkdocrendertask.h  ctkdocument.c  ctkdocument.h  ctkdocview.c  ctkdocview.h  ctkenums.c  ctkenums.h  ctkfileutils.c  ctkfileutils.h  ctkmarshal.c  ctkmarshal.h  ctkmousemanager.c  ctkmousemanager.h  ctktypes.h  ctkwindowdecorator-win32.c  ctkwindowdecorator-x11.c  ctkwindowdecorator.h
src/backend/: Makefile.am
src/backend/pdf/: Makefile.am  clue-pdf-1.0.xml  pdfdocument.c  pdfdocument.h  pdfpage.c  pdfpage.h
src/backend/txt/: Makefile.am  clue-txt-1.0.xml  txtdocument.c  txtdocument.h  txtpage.c  txtpage.h
tests/: Makefile.am  clue.supp  test-docview.c  test-mime.c  test-mime.py
win32/: backend.def  backend.rc  clue-pdf-1.0.vcxproj  clue-txt-1.0.vcxproj  config.h  ctk-1.0.vcxproj  ctk.def  ctk.rc  gather.cpp.props  gather.rc  gather.sln  gather.vcxproj  generate-gi.py  resource.h
win32/gdk-pixbuf-2.0/: loaders.cache
win32/style/: gtk-widgets-img.css  gtk-widgets.css  gtk.css
